// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`svgToJsx passes SVGO plugins 1`] = `
"<svg
  viewBox=\\"0 0 18 18\\"
>
  <path
    d=\\"M3.4 9.2c.1-1.1.4-2.3 1.5-3.2.9-.7 1.8-.8 2.9-.5 1.4.5 1 .5 2.4 0 1.5-.6 3 0 3.7.8.1.2.2.3 0 .4-1.8 1.3-1.6 3.9.3 5 .2.1.3.2.2.4-.4 1-1 1.9-1.7 2.7-.5.5-1.1.7-1.8.4-.1 0-.3-.1-.4-.1-.9-.1-1.7-.1-2.5.2-.3.1-.5.2-.8.3-.4.1-.8-.1-1.1-.4-.7-.5-1.1-1.2-1.5-1.9-.7-1.1-1.2-2.7-1.2-4.1\\"
  />
  <path
    d=\\"M11.6 2.5c0 1.2-1 2.4-2 2.7-.6.1-.8 0-.7-.6.2-1.2 1.2-2.2 2.5-2.5.2 0 .2 0 .2.2v.2\\"
  />
</svg>"
`;

exports[`svgToJsx works on a big one 1`] = `
"<svg
  height=\\"324\\"
  viewBox=\\"0 0 414 324\\"
  width=\\"414\\"
  xmlns=\\"http://www.w3.org/2000/svg\\"
>
  <path
    d=\\"M.333.333h414v324h-414z\\"
    fill=\\"#FFF\\"
  />
  <path
    d=\\"M152.333 24.298h127.432v109.036H152.333z\\"
    fill=\\"none\\"
  />
  <switch>
    <foreignobject
      height=\\"1\\"
      overflow=\\"visible\\"
      requiredExtensions=\\"http://ns.adobe.com/Flows/1.0/\\"
      width=\\"1\\"
      x=\\"0\\"
      y=\\"0\\"
    >
      <flowdef
        xmlns=\\"http://ns.adobe.com/Flows/1.0/\\"
      >
        <region
          textmatrix=\\"1 0 0 1 0 0\\"
        >
          <path
            d=\\"M279.765 133.333h-130.49V24.298h130.49v109.035z\\"
            fill=\\"none\\"
          />
        </region>
        <flow
          xmlns=\\"http://ns.adobe.com/Flows/1.0/\\"
        >
          <p
            text-align=\\"right\\"
            text-align-last=\\"right\\"
          >
            <span
              fontFamily=\\"'TimesNewRomanPS-BoldMT'\\"
              fontSize=\\"9\\"
            >
              ##3$$,
            </span>
            <span
              fontFamily=\\"'TimesNewRomanPSMT'\\"
              fontSize=\\"8.894\\"
            >
              <span
                fontFamily=\\"'TimesNewRomanPSMT'\\"
                fontSize=\\"7\\"
              >
                ##2$$
              </span>
            </span>
          </p>
          <p
            text-align=\\"right\\"
            text-align-last=\\"right\\"
          >
            <span
              fontFamily=\\"'TimesNewRomanPSMT'\\"
              fontSize=\\"8\\"
            >
              ##1$$,
            </span>
            <span
              fontFamily=\\"'TimesNewRomanPSMT'\\"
              fontSize=\\"8.596\\"
            >
              <span
                fontFamily=\\"'TimesNewRomanPSMT'\\"
                fontSize=\\"7\\"
              >
                ##5$$
              </span>
            </span>
          </p>
          <p
            text-align=\\"right\\"
            text-align-last=\\"right\\"
          >
            <span
              fontFamily=\\"'TimesNewRomanPSMT'\\"
              fontSize=\\"8\\"
            >
              ##10$$
            </span>
          </p>
          <p
            text-align=\\"right\\"
            text-align-last=\\"right\\"
          >
            <span
              fontFamily=\\"'TimesNewRomanPSMT'\\"
              fontSize=\\"8\\"
            >
              ##11$$
            </span>
          </p>
          <p
            text-align=\\"right\\"
            text-align-last=\\"right\\"
          >
            <span
              fontFamily=\\"'TimesNewRomanPSMT'\\"
              fontSize=\\"8\\"
            >
              ##7$$
            </span>
          </p>
          <p
            text-align=\\"right\\"
            text-align-last=\\"right\\"
          >
            <span
              fontFamily=\\"'TimesNewRomanPSMT'\\"
              fontSize=\\"8\\"
            >
              ##6$$
            </span>
          </p>
          <p
            text-align=\\"right\\"
            text-align-last=\\"right\\"
          >
            <span
              fontFamily=\\"'TimesNewRomanPSMT'\\"
              fontSize=\\"8\\"
            >
              ##8$$
            </span>
          </p>
          <p
            text-align=\\"right\\"
            text-align-last=\\"right\\"
          >
            <span
              fontFamily=\\"'TimesNewRomanPSMT'\\"
              fontSize=\\"8\\"
            >
              ##4$$
            </span>
          </p>
          <p
            text-align=\\"right\\"
            text-align-last=\\"right\\"
          >
            <span
              fontFamily=\\"'TimesNewRomanPSMT'\\"
              fontSize=\\"8\\"
            >
              ##17$$, ##18$$ ##19$$
            </span>
          </p>
        </flow>
      </flowdef>
    </foreignobject>
    <g>
      <path
        d=\\"M149.275 24.298h130.49v109.036h-130.49z\\"
        fill=\\"none\\"
      />
      <text
        transform=\\"translate(235.292 30.48)\\"
      >
        <tspan
          fontFamily=\\"'TimesNewRomanPS-BoldMT'\\"
          fontSize=\\"9\\"
          x=\\"0\\"
          y=\\"0\\"
        >
          ##3$$,
        </tspan>
        <tspan
          fontFamily=\\"'TimesNewRomanPSMT'\\"
          fontSize=\\"8.894\\"
          x=\\"24.75\\"
          y=\\"0\\"
        >
           
        </tspan>
        <tspan
          fontFamily=\\"'TimesNewRomanPSMT'\\"
          fontSize=\\"7\\"
          x=\\"26.974\\"
          y=\\"0\\"
        >
          ##2$$
        </tspan>
        <tspan
          fontFamily=\\"'TimesNewRomanPSMT'\\"
          fontSize=\\"8\\"
          x=\\"2.825\\"
          y=\\"10.314\\"
        >
          ##1$$,
        </tspan>
        <tspan
          fontFamily=\\"'TimesNewRomanPSMT'\\"
          fontSize=\\"8.596\\"
          x=\\"24.825\\"
          y=\\"10.314\\"
        >
           
        </tspan>
        <tspan
          fontFamily=\\"'TimesNewRomanPSMT'\\"
          fontSize=\\"7\\"
          x=\\"26.974\\"
          y=\\"10.314\\"
        >
          ##5$$
        </tspan>
        <tspan
          fontFamily=\\"'TimesNewRomanPSMT'\\"
          fontSize=\\"8\\"
          x=\\"20.474\\"
          y=\\"19.915\\"
        >
          ##10$$
        </tspan>
        <tspan
          fontFamily=\\"'TimesNewRomanPSMT'\\"
          fontSize=\\"8\\"
          x=\\"20.474\\"
          y=\\"29.515\\"
        >
          ##11$$
        </tspan>
        <tspan
          fontFamily=\\"'TimesNewRomanPSMT'\\"
          fontSize=\\"8\\"
          x=\\"24.474\\"
          y=\\"39.115\\"
        >
          ##7$$
        </tspan>
        <tspan
          fontFamily=\\"'TimesNewRomanPSMT'\\"
          fontSize=\\"8\\"
          x=\\"24.474\\"
          y=\\"48.715\\"
        >
          ##6$$
        </tspan>
        <tspan
          fontFamily=\\"'TimesNewRomanPSMT'\\"
          fontSize=\\"8\\"
          x=\\"24.474\\"
          y=\\"58.314\\"
        >
          ##8$$
        </tspan>
        <tspan
          fontFamily=\\"'TimesNewRomanPSMT'\\"
          fontSize=\\"8\\"
          x=\\"24.474\\"
          y=\\"67.915\\"
        >
          ##4$$
        </tspan>
        <tspan
          fontFamily=\\"'TimesNewRomanPSMT'\\"
          fontSize=\\"8\\"
          x=\\"-33.526\\"
          y=\\"77.515\\"
        >
          ##17$$, ##18$$ ##19$$
        </tspan>
      </text>
    </g>
  </switch>
  <path
    d=\\"M288.016 17.766h109.256v87.97H288.016z\\"
    fill=\\"#251413\\"
  />
  <path
    d=\\"M46.389 234.756h13.958v13.958H46.389zM46.389 218.081h13.958v13.958H46.389z\\"
    fill=\\"#4C2525\\"
  />
  <g>
    <path
      d=\\"M66.715 220.205h115.852v30.135H66.715z\\"
      fill=\\"none\\"
    />
    <switch>
      <foreignobject
        height=\\"1\\"
        overflow=\\"visible\\"
        requiredExtensions=\\"http://ns.adobe.com/Flows/1.0/\\"
        width=\\"1\\"
        x=\\"0\\"
        y=\\"0\\"
      >
        <flowdef
          xmlns=\\"http://ns.adobe.com/Flows/1.0/\\"
        >
          <region
            textmatrix=\\"1 0 0 1 0 0\\"
          >
            <path
              d=\\"M190.394 245.59H66.715v-25.385h123.679v25.385z\\"
              fill=\\"none\\"
            />
          </region>
          <flow
            fontFamily=\\"'TimesNewRomanPSMT'\\"
            fontSize=\\"5\\"
            xmlns=\\"http://ns.adobe.com/Flows/1.0/\\"
          >
            <p>
              <span>
                ##25$$
              </span>
            </p>
          </flow>
        </flowdef>
      </foreignobject>
      <g>
        <path
          d=\\"M66.715 220.205h123.679v25.385H66.715z\\"
          fill=\\"none\\"
        />
        <text
          fontFamily=\\"'TimesNewRomanPSMT'\\"
          fontSize=\\"5\\"
          transform=\\"translate(66.715 223.68)\\"
        >
          ##25$$
        </text>
      </g>
    </switch>
  </g>
</svg>"
`;

exports[`svgToJsx works on an airplane 1`] = `
"<svg
  viewBox=\\"0 0 18 18\\"
>
  <path
    d=\\"M7 4l1.6 4H5.5S4.1 6 3 6h-.8L3 8l1 3h4.6L7 15h2l3.2-4H14c1 0 2-.7 2-1.5S15 8 14 8h-1.8L9 4H7z\\"
  />
</svg>"
`;

exports[`svgToJsx works on an apple 1`] = `
"<svg
  height=\\"30\\"
  viewBox=\\"0 0 18 18\\"
  width=\\"30\\"
>
  <path
    d=\\"M3.4 9.2c.1-1.1.4-2.3 1.5-3.2.9-.7 1.8-.8 2.9-.5 1.4.5 1 .5 2.4 0 1.5-.6 3 0 3.7.8.1.2.2.3 0 .4-1.8 1.3-1.6 3.9.3 5 .2.1.3.2.2.4-.4 1-1 1.9-1.7 2.7-.5.5-1.1.7-1.8.4-.1 0-.3-.1-.4-.1-.9-.1-1.7-.1-2.5.2-.3.1-.5.2-.8.3-.4.1-.8-.1-1.1-.4-.7-.5-1.1-1.2-1.5-1.9-.7-1.1-1.2-2.7-1.2-4.1\\"
  />
  <path
    d=\\"M11.6 2.5c0 1.2-1 2.4-2 2.7-.6.1-.8 0-.7-.6.2-1.2 1.2-2.2 2.5-2.5.2 0 .2 0 .2.2v.2\\"
  />
</svg>"
`;
